<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.MainLogin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/running">



    <ImageView
        android:layout_width="129dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="95dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="54dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:text="Welcome Back,"/>


    <TextView
        android:layout_width="139dp"
        android:layout_height="27dp"
        android:layout_marginRight="95dp"
        android:text="Sign in to continue"
        android:textColor="@android:color/white"
        android:textStyle="bold" />




    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"

        android:background="@drawable/border"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="20dp"
        android:maxLength="20"
        android:inputType="text"/>
    <!--        android:backgroundTint="@color/cardview_light_background"-->


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:maxLength="10"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/password"/>

    <CheckBox
        android:id="@+id/showpassword"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="Show Password"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_forgot_password"
        android:layout_width="144dp"
        android:layout_height="23dp"
        android:layout_gravity="right"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/registerbtn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="New user?"/>

        <TextView
            android:id="@+id/textview_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/sign_up"/>
    </LinearLayout>
</LinearLayout>




