<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ForgetPassword.ForgotPassword"
    android:background="@drawable/forgot">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="180dp"
        android:textSize="40sp"
        android:text="Forgot Password?"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="Enter your username just in one step"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="to reset your password now"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:singleLine="false"
        android:textColor="@android:color/white"
        android:textColorHint="#EBEFF1"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/registerbtn"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_password"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-light"
        android:text="DON'T HAVE ACCOUNT?"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textview_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/sign_up"/>

</LinearLayout>